# goit-ds-hw-03

task_1/: Dockerfile  commands.py  db.py  docker-compose.yml  exception_handler.py  main.py  pyproject.toml
task_2/: authors.json  db.py  main.py  parser.py  pyproject.toml  quotes.json
