[project]
name = "goit-ds-hw-03_task-1"
version = "0.1.0"
description = "Simple cat database management system using PyMongo to interact with a MongoDB database."
authors = [
    {name = "Sviatozar Matiash",email = "sviatozar123@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.11"
dependencies = [
    "pymongo (==4.13.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
