[tool.poetry]
name = "goit-ds-hw-03-task-1"
version = "0.1.0"
description = "Simple cat database management system using PyMongo to interact with a MongoDB database."
authors = ["Sviatozar Matiash <sviatozar123@gmail.com>"]
readme = "README.md"
packages = [{ include = "your_module_name" }]  # заміни на назву каталогу з кодом

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pymongo = "==4.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"