[project]
name = "goit-ds-hw-03_task-2"
version = "0.1.0"
description = "Scraper"
authors = [
    {name = "Sviatozar Matiash",email = "sviatozar123@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.11"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pymongo (>=4.13.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
